--- a/index.html
+++ b/index.html
@@ -406,6 +406,23 @@
 
       </div>
     </div>
+
+    <div class="s-subscribe">
+      <p class="s-subscribe-caption">Subscribe</p>
+      <form class="s-subscribe-form">
+        <label class="s-subscribe-label">
+          <input class="s-subscribe-input" type="email" name="email" placeholder="E-mail" />
+        </label>
+        <button class="s-subscribe-button" type="submit">
+          Subscribe
+          <svg class="s-subscribe-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-send"></use>
+          </svg>
+        </button>
+      </form>
+
+    </div>
+  </div>
   </footer>
 
   <!-- window -->
