--- a/index.html
+++ b/index.html
@@ -407,15 +407,15 @@
       </div>
     </div>
 
-    <div class="s-subscribe">
-      <p class="s-subscribe-caption">Subscribe</p>
-      <form class="s-subscribe-form">
-        <label class="s-subscribe-label">
-          <input class="s-subscribe-input" type="email" name="email" placeholder="E-mail" />
+    <div class="section-subscribe">
+      <p class="section-subscribe-caption">Subscribe</p>
+      <form class="section-subscribe-form">
+        <label class="section-subscribe-label">
+          <input class="section-subscribe-input" type="email" name="email" placeholder="E-mail" />
         </label>
-        <button class="s-subscribe-button" type="submit">
+        <button class="section-subscribe-button" type="submit">
           Subscribe
-          <svg class="s-subscribe-icon" width="24" height="24">
+          <svg class="section-subscribe-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-send"></use>
           </svg>
         </button>
