--- a/index.html
+++ b/index.html
@@ -362,40 +362,42 @@
 
   </main>
 
-  <footer class="section-footer">
-    <div class="section-footer-container container">
-      <div class="section-footer-link-and-text">
-        <a class="section-footer-logo-link" href="./index.html">Web<span class="s-footer-logo-part-two">Studio</span></a>
-        <p class="section-footer-text">
+  <!-- footer -->
+
+  <footer class="s-footer">
+    <div class="s-footer-container container">
+      <div class="s-footer-link-and-text">
+        <a class="s-footer-logo-link" href="./index.html">Web<span class="s-footer-logo-part-two">Studio</span></a>
+        <p class="s-footer-text">
           Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
       </div>
-      <div class="section-footer-social">
-        <p class="section-footer-social-paragraph">Social media</p>
-        <ul class="section-footer-social-list">
+      <div class="s-footer-social">
+        <p class="s-footer-social-paragraph">Social media</p>
+        <ul class="s-footer-social-list">
           <li class="social-list-item">
-            <a class="section-footer-social-list-item-link" href="">
+            <a class="s-footer-social-list-item-link" href="">
               <svg class="social-list-item-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagramm"></use>
               </svg>
             </a>
           </li>
           <li class="social-list-item">
-            <a class="section-footer-social-list-item-link" href="">
+            <a class="s-footer-social-list-item-link" href="">
               <svg class="social-list-item-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-list-item">
-            <a class="section-footer-social-list-item-link" href="">
+            <a class="s-footer-social-list-item-link" href="">
               <svg class="social-list-item-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-list-item">
-            <a class="section-footer-social-list-item-link" href="">
+            <a class="s-footer-social-list-item-link" href="">
               <svg class="social-list-item-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
@@ -405,30 +407,29 @@
         </ul>
 
       </div>
-    </div>
 
-    <div class="section-subscribe">
-      <p class="section-subscribe-caption">Subscribe</p>
-      <form class="section-subscribe-form">
-        <label class="section-subscribe-label">
-          <input class="section-subscribe-input" type="email" name="email" placeholder="E-mail" />
-        </label>
-        <button class="section-subscribe-button" type="submit">
-          Subscribe
-          <svg class="section-subscribe-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-send"></use>
-          </svg>
-        </button>
-      </form>
+      <div class="s-subscribe">
+        <p class="s-subscribe-caption">Subscribe</p>
+        <form class="s-subscribe-form">
+          <label class="s-subscribe-label">
+            <input class="s-subscribe-input" type="email" name="email" placeholder="E-mail" />
+          </label>
+          <button class="s-subscribe-button" type="submit">
+            Subscribe
+            <svg class="s-subscribe-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
 
+      </div>
     </div>
-  </div>
   </footer>
 
   <!-- window -->
-  <div class="modal-overlay">
+  <div class="modal-overlay" modal>
     <div class="modal">
-      <button class="modal-close-button" type="button">
+      <button class="modal-close-button" type="button" close>
         <svg class="modal-close-icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
         </svg>
@@ -438,7 +439,8 @@
         <div class="modal-input-wrapper">
           <label class="modal-label" for="user-name">Name</label>
           <div class="modal-input-frame">
-            <input class="modal-input" type="text" name="user-name" id="user-name" />
+            <input class="modal-input" type="text" name="user-name" id="user-name" placeholder="UserName" required
+              pattern="[A-Za-z0-9]{2,15}" title="min 2 max 15 symbols" />
             <svg class="modal-input-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-name"></use>
             </svg>
@@ -448,7 +450,8 @@
         <div class="modal-input-wrapper">
           <label class="modal-label" for="user-phone">Phone</label>
           <div class="modal-input-frame">
-            <input class="modal-input" type="tel" name="user-phone" id="user-phone" />
+            <input class="modal-input" type="tel" name="user-phone" id="user-phone" placeholder="123456789012"
+              pattern="[0-9]{10}" required title="Enter your phone number in 123456789012 format" />
             <svg class="modal-input-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>
@@ -458,7 +461,9 @@
         <div class="modal-input-wrapper">
           <label class="modal-label" for="user-email">Email</label>
           <div class="modal-input-frame">
-            <input class="modal-input" type="email" name="user-email" id="user-email" />
+            <input class="modal-input" type="email" name="user-email" id="user-email" placeholder="name@example.com"
+              pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" required
+              title="Enter your email in name@example.com format" />
             <svg class="modal-input-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
@@ -484,14 +489,14 @@
           </label>
         </div>
 
-        <button class="modal-send-button" type="button">Send</button>
+        <button class="modal-send-button" type="submit">Send</button>
 
       </form>
 
     </div>
 
   </div>
-
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
