--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
   </footer>
   <!-- modal window -->
   <!-- add is-open class to next div for open modal window -->
-  <div class="window-overlay" modal>
+  <div class="window-overlay" window>
     <div class="window">
       <button class="window-close-button" type="button" close>
         <svg class="window-close-icon" width="8" height="8">
