--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="s-one">
       <div class="s-one-wrapper">
         <h1 class="s-one-header">Effective Solutions for Your Business</h1>
-        <button class="s-one-button" type="button" open-modal>Order Service</button>
+        <button class="s-one-button" type="button" >Order Service</button>
       </div>
     </section>
     <!-- section 2 -->
