--- a/index.html
+++ b/index.html
@@ -425,9 +425,9 @@
   </footer>
   <!-- modal window -->
   <!-- add is-open class to next div for open modal window -->
-  <div class="modal-overlay" modal>
+  <div class="overlay" modal>
     <div class="modal">
-      <button class="modal-close-button" type="button" close>
+      <button class="button" type="button" close>
         <svg class="modal-close-icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
         </svg>
