--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
     </div>
   </footer>
   <!-- modal window -->
-  <!-- add is-open class to next div for open modal window -->
+  
   <div class="overlay">
-    <div class="modal">
+    <div class="overlay">
       <button class="button" type="button">
         <svg class="modal-close-icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
