--- a/index.html
+++ b/index.html
@@ -425,9 +425,9 @@
   </footer>
   <!-- modal window -->
   
-  <div class="overlay">
-    <div class="overlay">
-      <button class="button" type="button">
+  <div class="registr-overlay registr" >
+    <div class="registr">
+      <button class="registr-button" type="button" registr>
         <svg class="modal-close-icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
         </svg>
