--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
   
   <div class="registr-overlay registr" >
     <div class="registr">
-      <button class="registr-button" type="button" registr>
+      <button class="button" type="button">
         <svg class="modal-close-icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
         </svg>
