--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
   </footer>
   <!-- modal window -->
   
-  <div class="registr-overlay" registr >
+  <div class="registr-overlay">
     <div class="registr">
       <button class="button" type="button">
         <svg class="modal-close-icon" width="8" height="8">
